# TB-DBTBot

./: .gitignore  Dockerfile  Dockerfile.symposium  README.md  app.py  chainlit.out  chainlit.toml  chainlit_app.py  chainlit_app_symposium.py  config.py  export_transcripts.py  global_system.txt  graph.py  graphy.py  main.py  prompt_loader.py  prompts.py  pyproject.toml  resources_loader.py  routing.py  safety.py  sample-env.txt  specialists.py  supervisor.py  ui_types.py
agents/: dbt_agent.py  faq_agent.py  psycho_agent.py
app/: __init__.py  config.py  graph.py  keywords.py  llm.py  nodes.py  prompts.py  state.py
archive/: README.md  chainlit_app.py
archive/mvp-baseline/: TODO.txt  sonnet_prompt.py
archive/mvp-supervisor/: supervisor_system.txt
baselines/: giant_prompt.txt  sonnet_plain.py  sonnet_prompt.py
cache/chroma/: _docs_fingerprint.sha256  chroma.sqlite3
data/: chainlit.db
diagrams/: full.mmd  tbtst_graph_20260113_082809.mmd
docs/: rag.md  testing.md
keywords/: domain_dbt.txt  domain_faq.txt  safety_crisis.txt  safety_intensifiers.txt
personas/: carla.txt  daniel.txt  isabel.txt  sofia.txt
prompts/: TODO.txt  classify_route.txt  classify_route_user.txt  crisis.txt  crisis_response.txt  dbt_brain.txt  faq_system.txt  global_response_rules.txt  ok_response.txt  safety_classifier.txt  tb_info_system.txt  tb_rag_answer_system.txt  tb_rag_answer_user.txt
prompts/DBT/: dt_prompt.txt  er_module_prompt.txt  er_prompt.txt  ie_prompt.txt  mind_prompt.txt
resources/: dbt_skills_kb.json  routing_keywords.json  safety_keywords.json  system_prompts.json  systems_prompts.json  tb_faq_kb.json
scripts/: init_chainlit_db.py
src/: tbtst_graph_20260112_225931-old.mmd
src/TB-RAG-documents/: Isoniazida_Rifapentina.txt  LTBI_PatientBrochure_esp.txt  MayoClinic_TB_Diagnostico_Tratamiento_GENERAL.txt  MayoClinic_TB_Diagnostico_Tratamiento_LATENT.txt  Preguntas y respuestas sobre la tuberculosis _ TB.txt  Preguntas_y_respuestas_TB_CDC_GENERAL.txt  Preguntas_y_respuestas_TB_CDC_LATENT_LTBI.txt  Tuberculosis - Diagnóstico y tratamiento - Mayo Clinic.txt  abece-tuberculosis-msps copy.txt  guia-de-participacion-comunitaria-y-tuberculosis copy.txt  hospital_muniz_2011_guia_tuberculosis copy.txt  old  tratamiento_y_prevencion_de_la_tuberculosis_2015 copy.txt  tuberculosis-material-educativo-escuelas-docentes copy.txt  tuberculosis-prevenible-y-curable-8825-diptico copy.txt
src/scripts/: preprocess_dbt_pdf.py
src/tbtst_bot/: app.py  config.py  db.py  graph.py  prompts.py  rag_utils.py
tests/: conftest.py  test_classifier_integration.py  test_graph_routing.py  test_graph_units.py  test_session_reinit_bugs.py
(+1549 files in other folders)
