[project]
name = "tbtst-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "langchain",
  "langchain-core",
  "langchain-aws",
  "boto3",
  "chainlit",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
markers = [
  "integration: calls real Bedrock; costs money; run with RUN_BEDROCK_TESTS=1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

