[project]
name = "tbtst-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "langchain",
  "langchain-core",
  "langchain-aws",
  "boto3",
  "chainlit",
  "sqlalchemy>=2.0.45",
  "psycopg2-binary>=2.9.11",
  "langchain-community>=0.4.1",
  "langchain-text-splitters>=1.1.0",
  "python-dotenv>=1.1.1",
  "langchain-huggingface>=1.2.0",
  "sentence-transformers>=5.2.0",
  "chromadb>=1.4.0",
  "tiktoken>=0.12.0",
  "pymupdf>=1.26.7",
  "pypdf>=6.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
markers = [
  "integration: calls real Bedrock; costs money; run with RUN_BEDROCK_TESTS=1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

